# awfulgame

./: Cargo.toml  a.txt
src/: asset_loader.rs  asteroids.rs  base.rs  camera.rs  collision_detection.rs  debug.rs  despawn.rs  health.rs  main.rs  movement.rs  player.rs  player_enemy.rs  schedule.rs  score.rs  spaceship.rs  ui.rs
