[package]
name = "mycrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
derive-new = "0.6.0"
rand = "0.8.5"
tokio = { version = "1.36.0", features = ["macros"] }

[profile.dev]
opt-level=1

[profile.dev.package."*"]
opt-level=3
